[package]
name = "rust_websocket_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.12", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
url = "2"
anyhow = "1.0"
futures-util = "0.3"
serde_json = "1.0"
base64 = "0.13"
urlencoding = "1.0"